--- a/resources/styles.css
+++ b/resources/styles.css
@@ -7,6 +7,7 @@
 
 /* Global stuff */
 html {
+  scroll-behavior: smooth;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: hsl(210, 9%, 80%);
@@ -62,7 +63,7 @@ section {
   list-style: none;
 }
 
-.navlist #bonus {
+.navlist #random-project-link {
   color: pink;
 }
 
@@ -109,7 +110,8 @@ section {
   margin-left: 0.75rem;
 }
 
-.list-container a, p {
+.list-container a,
+p {
   font-weight: 500;
 }
 
@@ -137,12 +139,14 @@ section {
 }
 
 #skills i {
-  font-size: 1.75rem;
+  font-size: 2rem;
+  transform: scale(1);
+  transition: all 0.05s linear;
 }
 
 #skills i:hover {
-  font-size: 2.5rem;
-  margin-bottom: 0;
+  transform: scale(1.5);
+  transition: all 0.05s linear;
 }
 
 /* contact section stuff */
@@ -154,6 +158,10 @@ section {
   font-size: 1.75rem;
 }
 
+#contact .mistery-text {
+  margin: 0;
+  padding: 0;
+}
 /* Mistery contact section */
 #contact .content {
   display: flex;
@@ -163,8 +171,17 @@ section {
   display: flex;
   gap: 1.75rem;
 }
+
+#contact i {
+  font-size: 2rem;
+}
+
 #mistery-div {
   margin-left: 2.5rem;
+}
+
+#mistery-div a {
+  color: pink;
 }
 
 /* Random project section */
@@ -189,7 +206,7 @@ section {
 #random-project button:active {
   width: 8rem;
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 /* Footer stuff */
@@ -210,7 +227,7 @@ footer {
 
   /* navlist stuff */
   .navlist {
-    gap: .75rem;
+    gap: 0.75rem;
   }
 
   /* about me section stuff  */
