--- a/resources/styles.css
+++ b/resources/styles.css
@@ -69,19 +69,19 @@ section {
 
 /* about me section stuff  */
 #about-me-container .content {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
   align-items: center;
   gap: 1.5rem;
 }
 
 #about-me-container .description {
-  width: auto;
+  width: 100%;
 }
 
 #about-me-container img {
-  width: 30%;
-  height: auto;
+  width: 100%;
+  /* height: 100%; */
   border-radius: 5px;
   aspect-ratio: 1/1;
 }
@@ -93,16 +93,12 @@ section {
 /* projects section stuff */
 #projects-container .content {
   display: flex;
-  gap: 2rem;
+  gap: 1.5rem;
   margin-left: 1rem;
+  flex-wrap: wrap;
 }
-
 .list-container {
-  width: 18rem;
-}
-
-.list-container:last-child {
-  width: auto;
+  min-width: 12rem;
 }
 
 .list-container ul {
@@ -214,11 +210,20 @@ footer {
   text-align: center;
   margin-top: 5rem;
 }
+/* @media for tablets */
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 12px;
+  }
+  body {
+    width: 90%;
+  }
+}
 /* @media for phones */
 @media only screen and (max-width: 480px) {
   /* Global stuff */
   html {
-    font-size: 12px;
+    font-size: 10px;
   }
 
   body {
@@ -235,9 +240,9 @@ footer {
     font-size: 0.75rem;
   }
 
-  #about-me-container img {
+  /* #about-me-container img {
     width: 45%;
-  }
+  } */
 
   /* projects section stuff */
   #projects-container .content {
